force-app/main/default/objects/Range__c/Range__c.object-meta.xml
<CustomObject>
    <description>Oggetto per la gestione delle fasce di consumo</description>
    <label>Fascia</label>
    <nameField>
        <displayFormat>RNG-{00000000}</displayFormat>
        <label>Fascia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fasce</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>