force-app/main/default/objects/Range__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Campo di configurazione usato per indicare il nome /codice del record dell&apos;oggetto delle Fasce legato alla funzionalità dei Criteri di Eleggiblità</description>
    <label>Posizione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_RangePosition</valueSetName>
    </valueSet>
</CustomField>