force-app/main/default/objects/Range__c/fields/PowerFlow__c.field-meta.xml
<CustomField>
    <fullName>PowerFlow__c</fullName>
    <description>Campo di configurazione usato per indicare il valore di potenza / portata legato al record dell&apos;oggetto delle Fasce legato alla funzionalità dei Criteri di Eleggiblità</description>
    <label>Potenza Portata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>