force-app/main/default/objects/Range__c/fields/RangeConsumptionGas__c.field-meta.xml
<CustomField>
    <fullName>RangeConsumptionGas__c</fullName>
    <description>Campo di configurazione usato per indicare la fascia di consumo GAS del record dell&apos;oggetto delle Fasce legato alla funzionalità dei Criteri di Eleggiblità</description>
    <label>Range Consumo GAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_RangeConsumptionGas</valueSetName>
    </valueSet>
</CustomField>